--- a/src/components/NavbarComponents/Navbar.css
+++ b/src/components/NavbarComponents/Navbar.css
@@ -6,3 +6,23 @@
   -moz-box-shadow: 0px 3px 26px -4px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 3px 26px -4px rgba(0, 0, 0, 0.4);
 }
+
+.navbar {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.navbar p {
+  display: inline-block;
+  line-height: 50px;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  font-size: 2rem;
+}
+
+@media (max-width: 800px) {
+  .navbar p {
+    margin-left: 5%;
+  }
+}
