--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -43,13 +43,14 @@
   flex-direction: row;
   align-items: flex-start;
   margin-bottom: 20px;
+  padding-left: 7px;
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
 }
 
 @media (max-width: 500px) {
   .text__input {
-    width: 100%;
+    width: 97.3%;
   }
 }
 
