--- a/src/components/NavbarComponents/Navbar.css
+++ b/src/components/NavbarComponents/Navbar.css
@@ -23,12 +23,6 @@
   font-size: 2rem;
 }
 
-@media (max-width: 800px) {
-  .navbar p {
-    margin-left: 5%;
-  }
-}
-
 .search__input {
   height: 30px;
   width: 190px;
@@ -36,4 +30,21 @@
   padding-left: 7px;
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
+}
+
+@media (max-width: 800px) {
+  .navbar p {
+    margin-left: 5%;
+  }
+
+  .search__input {
+    margin-right: 5%;
+    width: 30%;
+  }
+}
+
+@media (max-width: 500px) {
+  .navbar p {
+    font-size: 1.6rem;
+  }
 }
